# matrisaver

./: .gitignore  AGENTS.md  README.md  check_rust.sh  run-screensaver.cmd
.github/workflows/: ci.yml  release.yml
artifacts/: readme.md
assets/overlays/: README.md
assets/overlays/use/: README.md
docs/: README.md
docs/architecture/: ARCHITECTURE.md  MODULE_STRUCTURE.md  OVERLAY_SUBSYSTEM.md
docs/architecture/thin-adapters/: THIN_ADAPTERS.md
docs/development/: RUST_WORKSPACE.md  UPDATE_CHECK.md  WSL_RUST_TOOLING.md
docs/history/: MAKING_OF.md
docs/planning/: ROADMAP.md
docs/release/: SIGNING_AND_RELEASE_PROCESS.md
docs/research/: OVERLAY_DENSITY_AND_FILTER_HANDOFF.md  PERFORMANCE_RESEARCH_CYCLE_01.md  PERFORMANCE_RESEARCH_CYCLE_02_BASELINE.md
prototype/: AGENTS.md  CLAUDE.md  requirements.txt
prototype/src/: app.py  config.py  main.py
prototype/src/effects/: trace_effect.py
prototype/src/rendering/: ascii_overlay.py  matrix_rain.py  opengl_pipeline.py
prototype/src/ui/: developer_panel.py  menu.py
rust/: Cargo.toml  check.sh  env.sh
rust/.cargo/: config.toml
rust/crates/matrisaver-core/: Cargo.toml
rust/crates/matrisaver-core/src/: gpu.rs  lib.rs  update.rs
rust/crates/matrisaver-core/src/runtime/: trace.rs  types.rs
rust/crates/matrisaver-core/src/runtime/lifecycle/: cells.rs  column.rs  frame.rs  mutators.rs  reset.rs
rust/crates/matrisaver-core/src/runtime/overlay/: emit.rs  image.rs  inject.rs  io.rs  state.rs
rust/crates/matrisaver-host-linux/: Cargo.toml
rust/crates/matrisaver-host-linux/src/: main.rs
rust/crates/matrisaver-host-macos/: Cargo.toml
rust/crates/matrisaver-host-macos/src/: main.rs
rust/crates/matrisaver-host-windows/: Cargo.toml  build.rs
rust/crates/matrisaver-host-windows/src/: config_dialog.rs  main.rs  update_check.rs
rust/crates/matrisaver-host-windows/wix/: License.rtf  main.wxs
scripts/: README.md  preflight.ps1  preflight.sh
