[package]
name = "matrisaver-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "28"
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tga", "tiff", "webp"] }
# Cross-platform settings.json location. Returns the OS-native config
# dir (%APPDATA% on Windows, $XDG_CONFIG_HOME/~/.config on Linux,
# ~/Library/Application Support on macOS).
dirs = "5"
